--- a/pockets/miniprogram.accordion/assets/variables.less
+++ b/pockets/miniprogram.accordion/assets/variables.less
@@ -5,9 +5,9 @@
 @accordion-prefix-cls: ~'@{dora-prefix}-accordion';
 @accordion-color: @black;
 @accordion-bg: @component-background;
-@accordion-hd-padding: @spacing-lg @spacing-lg 9px;
-@accordion-ft-padding: 9px @spacing-lg @spacing-lg;
+@accordion-hd-padding: @spacing-xl @spacing-xl @spacing-base;
+@accordion-ft-padding: @spacing-base @spacing-xl @spacing-xl;
 @accordion-panel-icon-size: 20px;
-@accordion-panel-hd-padding: @spacing-base @spacing-lg;
-@accordion-panel-hd-padding-extra: @spacing-lg * 2;
-@accordion-panel-bd-padding: @spacing-lg;
+@accordion-panel-hd-padding: @spacing-xl;
+@accordion-panel-hd-padding-extra: @spacing-xl * 2;
+@accordion-panel-bd-padding: @spacing-xl;
