--- a/pockets/miniprogram.button/assets/variables.less
+++ b/pockets/miniprogram.button/assets/variables.less
@@ -3,76 +3,32 @@
 // Button themes
 // -----------------------------
 @button-prefix-cls: ~'@{dora-prefix}-button';
-@button-block-margin: 10px;
-@button-opacity-hover: .3;
-@button-opacity-disabled: .4;
-@button-default-border: transparent;
+@button-block-margin: @margin-component-lg;
+@button-strong-font-weight: 700;
+@button-clear-activated-opacity: var(--dora-button-clear-activated-opacity, .4);
+@button-disabled-opacity: var(--dora-button-disabled-opacity, .5);
+@button-border-radius: var(--dora-button-border-radius, @border-radius-base);
+@button-border-width: var(--dora-button-border-width, @border-width-base);
+@button-border-style: var(--dora-button-border-style, @border-style-base);
+@button-border-color: var(--dora-button-border-color, @positive);
 
-@button-border-radius-base: @border-radius-base;
+// Default Button
+// --------------------------------------------------
+@button-border-radius-base: @button-border-radius;
 @button-font-size-base: @font-size-lg;
-@button-height-base: 44px;
-@button-padding-base: 12px;
+@button-height-base: 48px;
+@button-padding-base: @spacing-lg;
 
+// Large Button
+// --------------------------------------------------
 @button-border-radius-lg: @border-radius-lg;
 @button-font-size-lg: 20px;
-@button-height-lg: 59px;
-@button-padding-lg: 16px;
+@button-height-lg: 56px;
+@button-padding-lg: @spacing-xl;
 
+// Small Button
+// --------------------------------------------------
 @button-border-radius-sm: @border-radius-sm;
-@button-font-size-sm: 12px;
-@button-height-sm: 30px;
-@button-padding-sm: 4px;
-
-@button-light-bg: var(--dora-color-light);
-@button-light-text: var(--dora-color-light-contrast);
-@button-light-border: transparent;
-@button-light-active-bg: var(--dora-color-light-active);
-@button-light-active-border: transparent;
-
-@button-stable-bg: var(--dora-color-stable);
-@button-stable-text: var(--dora-color-stable-contrast);
-@button-stable-border: transparent;
-@button-stable-active-bg: var(--dora-color-stable-active);
-@button-stable-active-border: transparent;
-
-@button-positive-bg: var(--dora-color-positive);
-@button-positive-text: var(--dora-color-positive-contrast);
-@button-positive-border: transparent;
-@button-positive-active-bg: var(--dora-color-positive-active);
-@button-positive-active-border: transparent;
-
-@button-calm-bg: var(--dora-color-calm);
-@button-calm-text: var(--dora-color-calm-contrast);
-@button-calm-border: transparent;
-@button-calm-active-bg: var(--dora-color-calm-active);
-@button-calm-active-border: transparent;
-
-@button-assertive-bg: var(--dora-color-assertive);
-@button-assertive-text: var(--dora-color-assertive-contrast);
-@button-assertive-border: transparent;
-@button-assertive-active-bg: var(--dora-color-assertive-active);
-@button-assertive-active-border: transparent;
-
-@button-balanced-bg: var(--dora-color-balanced);
-@button-balanced-text: var(--dora-color-balanced-contrast);
-@button-balanced-border: transparent;
-@button-balanced-active-bg: var(--dora-color-balanced-active);
-@button-balanced-active-border: transparent;
-
-@button-energized-bg: var(--dora-color-energized);
-@button-energized-text: var(--dora-color-energized-contrast);
-@button-energized-border: transparent;
-@button-energized-active-bg: var(--dora-color-energized-active);
-@button-energized-active-border: transparent;
-
-@button-royal-bg: var(--dora-color-royal);
-@button-royal-text: var(--dora-color-royal-contrast);
-@button-royal-border: transparent;
-@button-royal-active-bg: var(--dora-color-royal-active);
-@button-royal-active-border: transparent;
-
-@button-dark-bg: var(--dora-color-dark);
-@button-dark-text: var(--dora-color-dark-contrast);
-@button-dark-border: transparent;
-@button-dark-active-bg: var(--dora-color-dark-active);
-@button-dark-active-border: transparent;
+@button-font-size-sm: @font-size-sm;
+@button-height-sm: 32px;
+@button-padding-sm: @spacing-sm;
