--- a/pockets/miniprogram.button/miniprogram_dist/index.wxss
+++ b/pockets/miniprogram.button/miniprogram_dist/index.wxss
@@ -1,7 +1,8 @@
 @import '../../@doraemon-ui/style/var.wxss';
 
+@import '../../@doraemon-ui/style/color.wxss';
+
 .dora-button {
-  padding: 0;
   color: inherit!important;
   background: 0 0!important;
   font-size: inherit;
@@ -17,17 +18,48 @@
   display: inline-block;
   box-sizing: border-box;
   margin: 0;
-  padding: 0 24rpx;
-  min-width: 104rpx;
-  min-height: 88rpx!important;
+  padding: 0;
+  min-width: auto;
+  min-height: auto;
   border: none;
   border-radius: 0;
   vertical-align: middle;
   text-align: center;
   text-overflow: ellipsis;
-  font-size: 32rpx;
-  line-height: 84rpx;
-  cursor: pointer
+  font-size: initial;
+  line-height: initial;
+  cursor: pointer;
+  --opacity: 1;
+  --activated-opacity: 1;
+  --disabled-opacity: var(--dora-button-disabled-opacity, 0.5);
+  --border-width: var(--dora-button-border-width, var(--dora-border-width, 1PX));
+  --border-style: var(--dora-button-border-style, var(--dora-border-style, solid));
+  --border-color: var(--dora-button-border-color, var(--dora-color-positive, #3880ff));
+  --text-color: var(--dora-color-positive-contrast, #fff);
+  --activated-text-color: var(--dora-color-positive-contrast, #fff);
+  --background-color: var(--dora-color-positive, #3880ff);
+  --activated-background-color: var(--dora-color-positive-active, #055fff);
+  --border-color: var(--dora-color-positive, #3880ff);
+  --activated-border-color: var(--dora-color-positive-active, #055fff);
+  --border-radius: var(--dora-button-border-radius, 16rpx);
+  --font-size: 32rpx;
+  --height: 96rpx;
+  --padding-start: 24rpx;
+  --padding-end: 24rpx;
+  padding-top: unset;
+  padding-bottom: unset;
+  padding-left: var(--padding-start);
+  padding-right: var(--padding-end);
+  min-width: calc((var(--padding-start) * 1.5) + (var(--padding-end) * 1.5) + var(--font-size));
+  min-height: var(--height)!important;
+  font-size: var(--font-size);
+  line-height: calc(var(--height) - var(--border-width) * 2);
+  opacity: var(--opacity);
+  border-radius: var(--border-radius);
+  border: var(--border-width) var(--border-style) var(--border-color);
+  border-color: var(--border-color)!important;
+  background-color: var(--background-color)!important;
+  color: var(--text-color)!important
 }
 .dora-button::after {
   display: block;
@@ -56,40 +88,48 @@
   box-sizing: border-box;
   border-radius: 0
 }
-.dora-button--bordered {
-  border: 2rpx solid transparent
+.dora-button--clear {
+  --activated-opacity: var(--dora-button-clear-activated-opacity, 0.4);
+  --text-color: var(--dora-color-positive-active, #055fff);
+  --activated-text-color: var(--dora-color-positive-active, #055fff);
+  --background-color: transparent;
+  --activated-background-color: transparent;
+  --border-color: transparent;
+  --activated-border-color: transparent
 }
-.dora-button--border-radius {
-  border-radius: 16rpx
-}
-.dora-button--large.dora-button--border-radius {
-  border-radius: 24rpx
-}
-.dora-button--small.dora-button--border-radius {
-  border-radius: 8rpx
-}
-.dora-button--disabled {
-  opacity: .4!important
+.dora-button--outline {
+  --text-color: var(--dora-color-positive, #3880ff);
+  --activated-text-color: var(--dora-color-positive-contrast, #fff);
+  --background-color: transparent;
+  --activated-background-color: var(--dora-color-positive, #3880ff);
+  --border-color: var(--dora-color-positive, #3880ff);
+  --activated-border-color: var(--dora-color-positive, #3880ff)
 }
 .dora-button--small {
-  padding: 4rpx 8rpx 2rpx;
-  min-width: 56rpx;
-  min-height: 60rpx!important;
-  font-size: 24rpx;
-  line-height: 52rpx
+  --border-radius: 8rpx;
+  --font-size: 24rpx;
+  --height: 64rpx;
+  --padding-start: 8rpx;
+  --padding-end: 8rpx
 }
 .dora-button--large {
-  padding: 0 32rpx;
-  min-width: 136rpx;
-  min-height: 118rpx!important;
-  font-size: 40rpx;
-  line-height: 106rpx
+  --border-radius: 24rpx;
+  --font-size: 40rpx;
+  --height: 112rpx;
+  --padding-start: 32rpx;
+  --padding-end: 32rpx
+}
+.dora-button--strong {
+  font-weight: 700!important
 }
 .dora-button--block,
 .dora-button--full {
+  --block-margin-top: 18rpx;
+  --block-margin-bottom: 18rpx;
   width: 100%!important;
-  margin-top: 20rpx;
-  margin-bottom: 20rpx
+  contain: content!important;
+  margin-top: var(--block-margin-top);
+  margin-bottom: var(--block-margin-bottom)
 }
 .dora-button--block {
   display: block;
@@ -101,341 +141,51 @@
 .dora-button--full {
   display: block;
   margin-right: 0!important;
-  margin-left: 0!important;
+  margin-left: 0!important
+}
+.dora-button--full:not(.dora-button--rounded) {
   border-right-width: 0;
   border-left-width: 0;
   border-radius: 0
 }
-.dora-button--light,
-.dora-button--light--disabled {
-  border-color: transparent!important;
-  background-color: #f4f5f8!important;
-  background-color: var(--dora-color-light)!important;
-  color: #000!important;
-  color: var(--dora-color-light-contrast)!important
+.dora-button--rounded {
+  --border-radius: var(--height)
 }
-.dora-button--light.dora-button--hover {
-  background-color: #d5d9e4!important;
-  background-color: var(--dora-color-light-active)!important;
-  color: #000!important;
-  color: var(--dora-color-light-contrast)!important
+.dora-button--rectangular {
+  --border-radius: 0
 }
-.dora-button--light.dora-button--outline,
-.dora-button--light.dora-button--outline.dora-button--disabled {
-  border-color: #f4f5f8!important;
-  border-color: var(--dora-color-light)!important;
-  background-color: transparent!important;
-  color: #f4f5f8!important;
-  color: var(--dora-color-light)!important
+.dora-button--disabled {
+  cursor: default;
+  opacity: var(--disabled-opacity)!important;
+  pointer-events: none
 }
-.dora-button--light.dora-button--outline.dora-button--hover {
-  background-color: #f4f5f8!important;
-  background-color: var(--dora-color-light)!important;
-  color: #000!important;
-  color: var(--dora-color-light-contrast)!important
+.dora-button--activated {
+  opacity: var(--activated-opacity)!important;
+  border-color: var(--activated-border-color)!important;
+  background-color: var(--activated-background-color)!important;
+  color: var(--activated-text-color)!important
 }
-.dora-button--light.dora-button--clear,
-.dora-button--light.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #d5d9e4!important;
-  color: var(--dora-color-light-active)!important
+.dora-button.dora-color {
+  --text-color: var(--dora-color-contrast);
+  --activated-text-color: var(--dora-color-contrast);
+  --background-color: var(--dora-color-base);
+  --activated-background-color: var(--dora-color-active);
+  --border-color: var(--dora-color-base);
+  --activated-border-color: var(--dora-color-active)
 }
-.dora-button--light.dora-button--clear.dora-button--hover {
-  opacity: .3!important
+.dora-button:is(.dora-button--clear).dora-color {
+  --text-color: var(--dora-color-active);
+  --activated-text-color: var(--dora-color-active);
+  --background-color: transparent;
+  --activated-background-color: transparent;
+  --border-color: transparent;
+  --activated-border-color: transparent
 }
-.dora-button--stable,
-.dora-button--stable--disabled {
-  border-color: transparent!important;
-  background-color: #92949c!important;
-  background-color: var(--dora-color-stable)!important;
-  color: #fff!important;
-  color: var(--dora-color-stable-contrast)!important
-}
-.dora-button--stable.dora-button--hover {
-  background-color: #777a84!important;
-  background-color: var(--dora-color-stable-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-stable-contrast)!important
-}
-.dora-button--stable.dora-button--outline,
-.dora-button--stable.dora-button--outline.dora-button--disabled {
-  border-color: #92949c!important;
-  border-color: var(--dora-color-stable)!important;
-  background-color: transparent!important;
-  color: #92949c!important;
-  color: var(--dora-color-stable)!important
-}
-.dora-button--stable.dora-button--outline.dora-button--hover {
-  background-color: #92949c!important;
-  background-color: var(--dora-color-stable)!important;
-  color: #fff!important;
-  color: var(--dora-color-stable-contrast)!important
-}
-.dora-button--stable.dora-button--clear,
-.dora-button--stable.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #777a84!important;
-  color: var(--dora-color-stable-active)!important
-}
-.dora-button--stable.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--positive,
-.dora-button--positive--disabled {
-  border-color: transparent!important;
-  background-color: #3880ff!important;
-  background-color: var(--dora-color-positive)!important;
-  color: #fff!important;
-  color: var(--dora-color-positive-contrast)!important
-}
-.dora-button--positive.dora-button--hover {
-  background-color: #055fff!important;
-  background-color: var(--dora-color-positive-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-positive-contrast)!important
-}
-.dora-button--positive.dora-button--outline,
-.dora-button--positive.dora-button--outline.dora-button--disabled {
-  border-color: #3880ff!important;
-  border-color: var(--dora-color-positive)!important;
-  background-color: transparent!important;
-  color: #3880ff!important;
-  color: var(--dora-color-positive)!important
-}
-.dora-button--positive.dora-button--outline.dora-button--hover {
-  background-color: #3880ff!important;
-  background-color: var(--dora-color-positive)!important;
-  color: #fff!important;
-  color: var(--dora-color-positive-contrast)!important
-}
-.dora-button--positive.dora-button--clear,
-.dora-button--positive.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #055fff!important;
-  color: var(--dora-color-positive-active)!important
-}
-.dora-button--positive.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--calm,
-.dora-button--calm--disabled {
-  border-color: transparent!important;
-  background-color: #3dc2ff!important;
-  background-color: var(--dora-color-calm)!important;
-  color: #fff!important;
-  color: var(--dora-color-calm-contrast)!important
-}
-.dora-button--calm.dora-button--hover {
-  background-color: #0ab2ff!important;
-  background-color: var(--dora-color-calm-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-calm-contrast)!important
-}
-.dora-button--calm.dora-button--outline,
-.dora-button--calm.dora-button--outline.dora-button--disabled {
-  border-color: #3dc2ff!important;
-  border-color: var(--dora-color-calm)!important;
-  background-color: transparent!important;
-  color: #3dc2ff!important;
-  color: var(--dora-color-calm)!important
-}
-.dora-button--calm.dora-button--outline.dora-button--hover {
-  background-color: #3dc2ff!important;
-  background-color: var(--dora-color-calm)!important;
-  color: #fff!important;
-  color: var(--dora-color-calm-contrast)!important
-}
-.dora-button--calm.dora-button--clear,
-.dora-button--calm.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #0ab2ff!important;
-  color: var(--dora-color-calm-active)!important
-}
-.dora-button--calm.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--assertive,
-.dora-button--assertive--disabled {
-  border-color: transparent!important;
-  background-color: #eb445a!important;
-  background-color: var(--dora-color-assertive)!important;
-  color: #fff!important;
-  color: var(--dora-color-assertive-contrast)!important
-}
-.dora-button--assertive.dora-button--hover {
-  background-color: #e41833!important;
-  background-color: var(--dora-color-assertive-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-assertive-contrast)!important
-}
-.dora-button--assertive.dora-button--outline,
-.dora-button--assertive.dora-button--outline.dora-button--disabled {
-  border-color: #eb445a!important;
-  border-color: var(--dora-color-assertive)!important;
-  background-color: transparent!important;
-  color: #eb445a!important;
-  color: var(--dora-color-assertive)!important
-}
-.dora-button--assertive.dora-button--outline.dora-button--hover {
-  background-color: #eb445a!important;
-  background-color: var(--dora-color-assertive)!important;
-  color: #fff!important;
-  color: var(--dora-color-assertive-contrast)!important
-}
-.dora-button--assertive.dora-button--clear,
-.dora-button--assertive.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #e41833!important;
-  color: var(--dora-color-assertive-active)!important
-}
-.dora-button--assertive.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--balanced,
-.dora-button--balanced--disabled {
-  border-color: transparent!important;
-  background-color: #2dd36f!important;
-  background-color: var(--dora-color-balanced)!important;
-  color: #fff!important;
-  color: var(--dora-color-balanced-contrast)!important
-}
-.dora-button--balanced.dora-button--hover {
-  background-color: #24a959!important;
-  background-color: var(--dora-color-balanced-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-balanced-contrast)!important
-}
-.dora-button--balanced.dora-button--outline,
-.dora-button--balanced.dora-button--outline.dora-button--disabled {
-  border-color: #2dd36f!important;
-  border-color: var(--dora-color-balanced)!important;
-  background-color: transparent!important;
-  color: #2dd36f!important;
-  color: var(--dora-color-balanced)!important
-}
-.dora-button--balanced.dora-button--outline.dora-button--hover {
-  background-color: #2dd36f!important;
-  background-color: var(--dora-color-balanced)!important;
-  color: #fff!important;
-  color: var(--dora-color-balanced-contrast)!important
-}
-.dora-button--balanced.dora-button--clear,
-.dora-button--balanced.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #24a959!important;
-  color: var(--dora-color-balanced-active)!important
-}
-.dora-button--balanced.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--energized,
-.dora-button--energized--disabled {
-  border-color: transparent!important;
-  background-color: #ffc409!important;
-  background-color: var(--dora-color-energized)!important;
-  color: #000!important;
-  color: var(--dora-color-energized-contrast)!important
-}
-.dora-button--energized.dora-button--hover {
-  background-color: #d5a200!important;
-  background-color: var(--dora-color-energized-active)!important;
-  color: #000!important;
-  color: var(--dora-color-energized-contrast)!important
-}
-.dora-button--energized.dora-button--outline,
-.dora-button--energized.dora-button--outline.dora-button--disabled {
-  border-color: #ffc409!important;
-  border-color: var(--dora-color-energized)!important;
-  background-color: transparent!important;
-  color: #ffc409!important;
-  color: var(--dora-color-energized)!important
-}
-.dora-button--energized.dora-button--outline.dora-button--hover {
-  background-color: #ffc409!important;
-  background-color: var(--dora-color-energized)!important;
-  color: #000!important;
-  color: var(--dora-color-energized-contrast)!important
-}
-.dora-button--energized.dora-button--clear,
-.dora-button--energized.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #d5a200!important;
-  color: var(--dora-color-energized-active)!important
-}
-.dora-button--energized.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--royal,
-.dora-button--royal--disabled {
-  border-color: transparent!important;
-  background-color: #8a63d2!important;
-  background-color: var(--dora-color-royal)!important;
-  color: #fff!important;
-  color: var(--dora-color-royal-contrast)!important
-}
-.dora-button--royal.dora-button--hover {
-  background-color: #6c3bc7!important;
-  background-color: var(--dora-color-royal-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-royal-contrast)!important
-}
-.dora-button--royal.dora-button--outline,
-.dora-button--royal.dora-button--outline.dora-button--disabled {
-  border-color: #8a63d2!important;
-  border-color: var(--dora-color-royal)!important;
-  background-color: transparent!important;
-  color: #8a63d2!important;
-  color: var(--dora-color-royal)!important
-}
-.dora-button--royal.dora-button--outline.dora-button--hover {
-  background-color: #8a63d2!important;
-  background-color: var(--dora-color-royal)!important;
-  color: #fff!important;
-  color: var(--dora-color-royal-contrast)!important
-}
-.dora-button--royal.dora-button--clear,
-.dora-button--royal.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #6c3bc7!important;
-  color: var(--dora-color-royal-active)!important
-}
-.dora-button--royal.dora-button--clear.dora-button--hover {
-  opacity: .3!important
-}
-.dora-button--dark,
-.dora-button--dark--disabled {
-  border-color: transparent!important;
-  background-color: #222428!important;
-  background-color: var(--dora-color-dark)!important;
-  color: #fff!important;
-  color: var(--dora-color-dark-contrast)!important
-}
-.dora-button--dark.dora-button--hover {
-  background-color: #0b0b0c!important;
-  background-color: var(--dora-color-dark-active)!important;
-  color: #fff!important;
-  color: var(--dora-color-dark-contrast)!important
-}
-.dora-button--dark.dora-button--outline,
-.dora-button--dark.dora-button--outline.dora-button--disabled {
-  border-color: #222428!important;
-  border-color: var(--dora-color-dark)!important;
-  background-color: transparent!important;
-  color: #222428!important;
-  color: var(--dora-color-dark)!important
-}
-.dora-button--dark.dora-button--outline.dora-button--hover {
-  background-color: #222428!important;
-  background-color: var(--dora-color-dark)!important;
-  color: #fff!important;
-  color: var(--dora-color-dark-contrast)!important
-}
-.dora-button--dark.dora-button--clear,
-.dora-button--dark.dora-button--clear.dora-button--disabled {
-  background-color: transparent!important;
-  color: #0b0b0c!important;
-  color: var(--dora-color-dark-active)!important
-}
-.dora-button--dark.dora-button--clear.dora-button--hover {
-  opacity: .3!important
+.dora-button:is(.dora-button--outline).dora-color {
+  --text-color: var(--dora-color-base);
+  --activated-text-color: var(--dora-color-contrast);
+  --background-color: transparent;
+  --activated-background-color: var(--dora-color-base);
+  --border-color: var(--dora-color-base);
+  --activated-border-color: var(--dora-color-base)
 }
