--- a/pockets/miniprogram.dialog/assets/variables.less
+++ b/pockets/miniprogram.dialog/assets/variables.less
@@ -4,7 +4,7 @@
 // -----------------------------
 @dialog-prefix-cls: ~'@{dora-prefix}-dialog';
 @dialog-color: @black;
-@dialog-bd-padding: 24px 12px;
-@dialog-bd-font-size: 17px;
-@dialog-title-font-size: 18px;
+@dialog-bd-padding: @spacing-lg * 2 @spacing-lg;
+@dialog-bd-font-size: var(--dora-dialog-font-size, 17px);
+@dialog-title-font-size: var(--dora-dialog-title-font-size, 18px);
 @dialog-content-bg: @component-background;
