--- a/pockets/miniprogram.list/assets/item.less
+++ b/pockets/miniprogram.list/assets/item.less
@@ -14,7 +14,7 @@
   &--has-line&::after {
     .setBottomLine(@border-color-split);
 
-    left: 15px;
+    left: @spacing-xl;
   }
 
   &--has-line&--last::after {
@@ -57,7 +57,7 @@
   }
 
   &--access &__ft {
-    padding-right: 17px;
+    padding-right: @spacing-xl;
     position: relative;
 
     &::after {
