--- a/pockets/miniprogram.list/assets/variables.less
+++ b/pockets/miniprogram.list/assets/variables.less
@@ -5,6 +5,6 @@
 @list-prefix-cls: ~'@{dora-prefix}-list';
 @list-bg: @component-background;
 @list-icon-size: 20px;
-@list-padding: @spacing-base @spacing-lg;
-@list-hd-padding: @spacing-lg @spacing-lg 9px;
-@list-ft-padding: 9px @spacing-lg @spacing-lg;
+@list-padding: @spacing-xl;
+@list-hd-padding: @spacing-xl @spacing-xl @spacing-base;
+@list-ft-padding: @spacing-base @spacing-xl @spacing-xl;
