--- a/pockets/style/lib/var.dark.less
+++ b/pockets/style/lib/var.dark.less
@@ -2,8 +2,8 @@
 
 .varDark() {
   // Background color for `<body>`
-  --dora-background-color: #000;
-  --dora-background-color-rgb: .colorToRGB(#000)[@list];
+  --dora-background-color: #0d0d0d;
+  --dora-background-color-rgb: .colorToRGB(#0d0d0d)[@list];
 
   // Text color for `<body>`
   --dora-text-color: #fff;
@@ -16,8 +16,12 @@
   --dora-black-rgb: .colorToRGB(#fff)[@list];
 
   // Base background color for most components
-  --dora-component-background-color: #000;
-  --dora-component-background-color-rgb: .colorToRGB(#000)[@list];
+  --dora-component-background-color: #191919;
+  --dora-component-background-color-rgb: .colorToRGB(#191919)[@list];
+
+  // Base background color for actived state
+  --dora-active-state-bg: #333;
+  --dora-active-state-bg-rgb: .colorToRGB(#333)[@list];
 
   // Default Foreground and Background Step Colors
   // ---------------------------------------------
