--- a/pockets/style/lib/var.light.less
+++ b/pockets/style/lib/var.light.less
@@ -2,8 +2,8 @@
 
 .varLight() {
   // Background color for `<body>`
-  --dora-background-color: #fff;
-  --dora-background-color-rgb: .colorToRGB(#fff)[@list];
+  --dora-background-color: #fafafa;
+  --dora-background-color-rgb: .colorToRGB(#fafafa)[@list];
 
   // Text color for `<body>`
   --dora-text-color: #000;
@@ -18,6 +18,10 @@
   // Base background color for most components
   --dora-component-background-color: #fff;
   --dora-component-background-color-rgb: .colorToRGB(#fff)[@list];
+
+  // Base background color for actived state
+  --dora-active-state-bg: #e6e6e6;
+  --dora-active-state-bg-rgb: .colorToRGB(#e6e6e6)[@list];
 
   // Default Foreground and Background Step Colors
   // ---------------------------------------------
