--- a/pockets/miniprogram.accordion/assets/index.less
+++ b/pockets/miniprogram.accordion/assets/index.less
@@ -5,6 +5,9 @@
 .@{accordion-prefix-cls} {
   position: relative;
   border: none;
+  font-size: @font-size-lg;
+  line-height: @line-height-base;
+  overflow: hidden;
 
   &__hd {
     padding: @accordion-hd-padding;
