--- a/pockets/miniprogram.accordion/assets/panel.less
+++ b/pockets/miniprogram.accordion/assets/panel.less
@@ -37,8 +37,8 @@
     transition: transform .2s ease;
     position: absolute;
     display: block;
-    top: 15px;
-    right: 15px;
+    // top: @spacing-xl;
+    right: @spacing-xl;
   }
 
   &--current > &__hd > &__arrow {
@@ -49,7 +49,6 @@
     display: none;
     overflow: hidden;
     background: @accordion-bg;
-    font-size: 15px;
     color: @heading-color;
     position: relative;
     padding: @accordion-panel-bd-padding;
