--- a/pockets/miniprogram.accordion/miniprogram_dist/panel.wxss
+++ b/pockets/miniprogram.accordion/miniprogram_dist/panel.wxss
@@ -2,13 +2,13 @@
 
 .dora-accordion-panel__hd {
   position: relative;
-  padding: 20rpx 30rpx;
+  padding: 32rpx;
   color: #000;
   color: var(--dora-black);
   background-color: #fff;
   background-color: var(--dora-component-background-color);
   box-sizing: border-box;
-  padding-right: 60rpx;
+  padding-right: 64rpx;
   width: auto;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -36,12 +36,12 @@
   width: 40rpx;
   height: 40rpx;
   display: block;
-  margin-right: 10rpx
+  margin-right: 12rpx
 }
 .dora-accordion-panel__arrow {
   display: inline-block;
-  width: 30rpx;
-  height: 30rpx;
+  width: 32rpx;
+  height: 32rpx;
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20width%3D%2216%22%20height%3D%2226%22%20viewBox%3D%220%200%2016%2026%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M2%200L0%202l11.5%2011L0%2024l2%202%2014-13z%22%20fill%3D%22%23c7c7cc%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E");
   background-size: contain;
   background-repeat: no-repeat;
@@ -50,8 +50,7 @@
   transition: transform .2s ease;
   position: absolute;
   display: block;
-  top: 30rpx;
-  right: 30rpx
+  right: 32rpx
 }
 .dora-accordion-panel--current > .dora-accordion-panel__hd > .dora-accordion-panel__arrow {
   transform: rotate(270deg)
@@ -61,11 +60,10 @@
   overflow: hidden;
   background: #fff;
   background: var(--dora-component-background-color);
-  font-size: 30rpx;
   color: rgba(0,0,0,.55);
   color: rgba(var(--dora-text-color-rgb),.55);
   position: relative;
-  padding: 30rpx
+  padding: 32rpx
 }
 .dora-accordion-panel__bd::after {
   content: " ";
