--- a/pockets/miniprogram.button/proscenium/pages/index/index.wxml
+++ b/pockets/miniprogram.button/proscenium/pages/index/index.wxml
@@ -1,85 +1,72 @@
 <demo-page
   darkmode="auto"
   title="Button"
-  desc="轻提示"
+  desc="按钮"
   clickable
 >
   <demo-block align="unset" title="Basic">
     <block>
-      <dora-button block type="light">light</dora-button>
-      <dora-button block type="stable">stable</dora-button>
-      <dora-button block type="positive">positive</dora-button>
-      <dora-button block type="calm">calm</dora-button>
-      <dora-button block type="assertive">assertive</dora-button>
-      <dora-button block type="balanced">balanced</dora-button>
-      <dora-button block type="energized">energized</dora-button>
-      <dora-button block type="royal">royal</dora-button>
-      <dora-button block type="dark">dark</dora-button>
+      <dora-button expand="block" color="light">light</dora-button>
+      <dora-button expand="block" color="stable">stable</dora-button>
+      <dora-button expand="block" color="positive">positive</dora-button>
+      <dora-button expand="block" color="calm">calm</dora-button>
+      <dora-button expand="block" color="assertive">assertive</dora-button>
+      <dora-button expand="block" color="balanced">balanced</dora-button>
+      <dora-button expand="block" color="energized">energized</dora-button>
+      <dora-button expand="block" color="royal">royal</dora-button>
+      <dora-button expand="block" color="dark">dark</dora-button>
     </block>
   </demo-block>
-  <demo-block align="unset" title="Outline">
+  <demo-block align="unset" title="Fills">
     <block>
-      <dora-button block outline type="light">light</dora-button>
-      <dora-button block outline type="stable">stable</dora-button>
-      <dora-button block outline type="positive">positive</dora-button>
-      <dora-button block outline type="calm">calm</dora-button>
-      <dora-button block outline type="assertive">assertive</dora-button>
-      <dora-button block outline type="balanced">balanced</dora-button>
-      <dora-button block outline type="energized">energized</dora-button>
-      <dora-button block outline type="royal">royal</dora-button>
-      <dora-button block outline type="dark">dark</dora-button>
+      <dora-button expand="block" fill="clear" color="light">clear light</dora-button>
+      <dora-button expand="block" fill="clear" color="stable">clear stable</dora-button>
+      <dora-button expand="block" fill="clear" color="positive">clear positive</dora-button>
+      <dora-button expand="block" fill="solid" color="calm">solid calm</dora-button>
+      <dora-button expand="block" fill="solid" color="assertive">solid assertive</dora-button>
+      <dora-button expand="block" fill="solid" color="balanced">solid balanced</dora-button>
+      <dora-button expand="block" fill="outline" color="energized">outline energized</dora-button>
+      <dora-button expand="block" fill="outline" color="royal">outline royal</dora-button>
+      <dora-button expand="block" fill="outline" color="dark">outline dark</dora-button>
+    </block>
+  </demo-block>
+  <demo-block align="unset" title="Shapes">
+    <block>
+      <dora-button expand="block" color="light">light</dora-button>
+      <dora-button expand="block" color="stable">stable</dora-button>
+      <dora-button expand="block" color="positive">positive</dora-button>
+      <dora-button expand="block" shape="rounded" color="calm">rounded calm</dora-button>
+      <dora-button expand="block" shape="rounded" color="assertive">rounded assertive</dora-button>
+      <dora-button expand="block" shape="rounded" color="balanced">rounded balanced</dora-button>
+      <dora-button expand="block" shape="rectangular" color="energized">rectangular energized</dora-button>
+      <dora-button expand="block" shape="rectangular" color="royal">rectangular royal</dora-button>
+      <dora-button expand="block" shape="rectangular" color="dark">rectangular dark</dora-button>
     </block>
   </demo-block>
   <demo-block align="unset" title="Size">
     <block>
-      <dora-button block size="small" type="light">light</dora-button>
-      <dora-button block size="small" type="stable">stable</dora-button>
-      <dora-button block size="small" type="positive">positive</dora-button>
-      <dora-button block size="default" type="calm">calm</dora-button>
-      <dora-button block size="default" type="assertive">assertive</dora-button>
-      <dora-button block size="default" type="balanced">balanced</dora-button>
-      <dora-button block size="large" type="energized">energized</dora-button>
-      <dora-button block size="large" type="royal">royal</dora-button>
-      <dora-button block size="large" type="dark">dark</dora-button>
+      <dora-button expand="block" size="small" color="light">small light</dora-button>
+      <dora-button expand="block" size="small" color="stable">small stable</dora-button>
+      <dora-button expand="block" size="small" color="positive">small positive</dora-button>
+      <dora-button expand="block" size="default" color="calm">calm</dora-button>
+      <dora-button expand="block" size="default" color="assertive">assertive</dora-button>
+      <dora-button expand="block" size="default" color="balanced">balanced</dora-button>
+      <dora-button expand="block" size="large" color="energized">large energized</dora-button>
+      <dora-button expand="block" size="large" color="royal">large royal</dora-button>
+      <dora-button expand="block" size="large" color="dark">large dark</dora-button>
     </block>
   </demo-block>
-  <demo-block align="unset" title="Clear">
+  <demo-block align="unset" title="More">
     <block>
-      <dora-button block clear type="light">light</dora-button>
-      <dora-button block clear type="stable">stable</dora-button>
-      <dora-button block clear type="positive">positive</dora-button>
-      <dora-button block clear type="calm">calm</dora-button>
-      <dora-button block clear type="assertive">assertive</dora-button>
-      <dora-button block clear type="balanced">balanced</dora-button>
-      <dora-button block clear type="energized">energized</dora-button>
-      <dora-button block clear type="royal">royal</dora-button>
-      <dora-button block clear type="dark">dark</dora-button>
-    </block>
-  </demo-block>
-  <demo-block align="unset" title="Loading">
-    <block>
-      <dora-button block loading type="light">light</dora-button>
-      <dora-button block loading type="stable">stable</dora-button>
-      <dora-button block loading type="positive">positive</dora-button>
-      <dora-button block loading type="calm">calm</dora-button>
-      <dora-button block loading type="assertive">assertive</dora-button>
-      <dora-button block loading type="balanced">balanced</dora-button>
-      <dora-button block loading type="energized">energized</dora-button>
-      <dora-button block loading type="royal">royal</dora-button>
-      <dora-button block loading type="dark">dark</dora-button>
-    </block>
-  </demo-block>
-  <demo-block align="unset" title="Disabled">
-    <block>
-      <dora-button block disabled type="light">light</dora-button>
-      <dora-button block disabled type="stable">stable</dora-button>
-      <dora-button block disabled type="positive">positive</dora-button>
-      <dora-button block disabled type="calm">calm</dora-button>
-      <dora-button block disabled type="assertive">assertive</dora-button>
-      <dora-button block disabled type="balanced">balanced</dora-button>
-      <dora-button block disabled type="energized">energized</dora-button>
-      <dora-button block disabled type="royal">royal</dora-button>
-      <dora-button block disabled type="dark">dark</dora-button>
+      <dora-button expand="block" loading color="light">loading light</dora-button>
+      <dora-button expand="block" loading color="stable">loading stable</dora-button>
+      <dora-button expand="block" loading color="positive">loading positive</dora-button>
+      <dora-button expand="block" disabled color="calm">disabled calm</dora-button>
+      <dora-button expand="block" disabled color="assertive">disabled assertive</dora-button>
+      <dora-button expand="block" disabled color="balanced">disabled balanced</dora-button>
+      <dora-button expand="block" strong color="energized">strong energized</dora-button>
+      <dora-button expand="block" strong color="royal">strong royal</dora-button>
+      <dora-button expand="block" strong color="dark">strong dark</dora-button>
     </block>
   </demo-block>
 </demo-page>
