--- a/pockets/miniprogram.list/assets/index.less
+++ b/pockets/miniprogram.list/assets/index.less
@@ -3,6 +3,11 @@
 // List styles
 // -----------------------------
 .@{list-prefix-cls} {
+  position: relative;
+  font-size: @font-size-lg;
+  line-height: @line-height-base;
+  overflow: hidden;
+
   &__hd {
     padding: @list-hd-padding;
     font-size: @font-size-base;
