--- a/pockets/miniprogram.list/miniprogram_dist/index.wxss
+++ b/pockets/miniprogram.list/miniprogram_dist/index.wxss
@@ -1,7 +1,13 @@
 @import '../../@doraemon-ui/style/var.wxss';
 
+.dora-list {
+  position: relative;
+  font-size: 32rpx;
+  line-height: 1.5;
+  overflow: hidden
+}
 .dora-list__hd {
-  padding: 30rpx 30rpx 18rpx;
+  padding: 32rpx 32rpx 16rpx;
   font-size: 28rpx;
   color: rgba(0,0,0,.45);
   color: rgba(var(--dora-text-color-rgb),.45);
@@ -32,7 +38,7 @@
   border-bottom-width: var(--dora-border-width,1PX)
 }
 .dora-list__ft {
-  padding: 18rpx 30rpx 30rpx;
+  padding: 16rpx 32rpx 32rpx;
   font-size: 28rpx;
   color: rgba(0,0,0,.45);
   color: rgba(var(--dora-text-color-rgb),.45)
